--- a/src/app.css
+++ b/src/app.css
@@ -8,7 +8,8 @@
 }
 
 body {
-  font-family: 'Sohne Regular', sans-serif;
+  font-family: 'Soehne', sans-serif;
+  font-weight: 400;
   color: var(--deep-navy);
 }
 
@@ -37,6 +38,7 @@ body {
 }
 
 a {
+  transition: all 0.3s;
   text-decoration: none;
 }
 
@@ -54,7 +56,8 @@ ul {
   border-radius: 32px;
   text-decoration: none;
   font-weight: 500;
-  font-family: 'Sohne Medium';
+  font-family: inherit;
+  font-size: 16px;
 }
 .btn.btn--primary {
   background-color: var(--orange);
