--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,10 @@
 @import '../src/lib/assets/css/variables.css';
 @import '../src/lib/assets/css/typothraphy.css';
 
+html {
+  color-scheme: light dark;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -35,6 +39,9 @@ body {
 }
 .align-flex-end {
   align-items: flex-end;
+}
+.align-center {
+  align-items: center;
 }
 
 a {
