--- a/src/lib/components/Footer/footer.css
+++ b/src/lib/components/Footer/footer.css
@@ -143,7 +143,7 @@
 @media (min-width: 992px) {
   .footer__large-link {
     font-size: 136px;
-    line-height: 98px;
+    line-height: 108px;
   }
 }
 @media (min-width: 768px) and (max-width: 1279px) {
@@ -190,15 +190,15 @@
     bottom: 0;
   }
   .footer__large-link:after {
-    bottom: 10px;
+    bottom: -16px;
     height: 6px;
   }
   .footer a:not(.btn):not(.socials__link):hover,
   .footer p a:not(.btn):not(.socials__link):not(.logo):hover {
     color: var(--orange);
   }
-  .footer a:not(.btn):hover:after,
-  .footer p a:not(.btn):not(.logo):hover:after,
+  .footer a:not(.btn):not(.socials__link):hover:after,
+  .footer p a:not(.btn):not(.socials__link):not(.logo):hover:after,
   .footer a:not(.btn):hover > span:after {
     right: 0;
   }
