--- a/src/lib/assets/css/variables.css
+++ b/src/lib/assets/css/variables.css
@@ -48,6 +48,8 @@
   --deep-navy-light:  #9e9fa6;
   --deep-navy-pale:   #d8d8d8;
 
+  --white:            #fff;
+
   /* FONT COLORS */
   --text-dark:        #100F08;
   --text-white:       #e0e0e0;
