--- a/src/lib/components/Header/header.css
+++ b/src/lib/components/Header/header.css
@@ -1,14 +1,71 @@
+@keyframes mobileBtnTopMoving {
+  0% {
+    top: 0;
+  }
+  50% {
+    top: 10px;
+  }
+  100% {
+    top: 10px;
+    transform: rotate(45deg);
+  }
+}
+@keyframes mobileBtnBottomMoving {
+  0% {
+    bottom: 0
+  }
+  50% {
+    bottom: 10px;
+  }
+  100% {
+    bottom: 10px;
+    transform: rotate(-45deg);
+  }
+}
+@keyframes mobileBtnTopMovingBack {
+  0% {
+    top: 10px;
+    transform: rotate(45deg);
+  }
+  50% {
+    top: 10px;
+    transform: rotate(0);
+  }
+  100% {
+    top: 0;
+  }
+}
+@keyframes mobileBtnBottomMovingBack {
+  0% {
+    bottom: 10px;
+    transform: rotate(-45deg);
+    
+  }
+  50% {
+    bottom: 10px;
+    transform: rotate(0);
+  }
+  100% {
+    bottom: 0
+  }
+}
+
 .header {
   position: relative;
   z-index: 10;
-  padding-top: var(--spacing-s);
-  padding-bottom: var(--spacing-s);
+  padding-top: var(--spacing-m);
+  padding-bottom: var(--spacing-m);
+}
+.logo img {
+  display: block;
 }
 .header a,
 .header span {
   color: inherit;
 }
-
+.header__col {
+  display: flex;
+}
 .navigation {
   font-weight: 500;
 }
@@ -42,7 +99,6 @@
 .navigation__list {
   display: flex;
   align-items: center;
-  gap: calc(var(--spacing-s) + var(--spacing-xxs));
 }
 .navigation__sub-menu-btn {
   display: inline-flex;
@@ -117,4 +173,136 @@
 }
 .switch-theme.dark:after {
   opacity: 0;
+}
+
+@media (max-width: 991px) {
+  .header.fixed {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    color: var(--white);
+    background-color: var(--teal-dark);
+    background-repeat: no-repeat;
+    background-position: 100% 100%;
+    background-image: url(../../assets/images/bg/mobile-menu-bg.svg);
+  }
+  .header .container {
+    position: relative;
+    height: 100%;
+  }
+  .header__col:not(.header__col--absolute) {
+    width: 100%;
+    flex: 1;
+    flex-direction: column;
+    gap: var(--spacing-m);
+    flex-grow: 1;
+  }
+  .header__col--absolute {
+    position: absolute;
+    top: -1px;
+    right: 15px;
+  }
+  .header .row {
+    height: 100%;
+    flex-direction: column;
+  }
+  .navigation--dropdown .navigation__list {
+    flex-direction: column;
+  }
+  .mobile-menu-btn {
+    position: relative;
+    width: 31px;
+    height: 23px;
+    border: none;
+    background-color: transparent;
+    outline: none !important;
+    margin-left: var(--spacing-s);
+  }
+  .mobile-menu-btn:before,
+  .mobile-menu-btn:after {
+    content: '';
+  }
+  .mobile-menu-btn:before,
+  .mobile-menu-btn:after,
+  .mobile-menu-btn em {
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    border-radius: 2px;
+    background-color: currentColor;
+    transition: all 0.3s;
+    left: 0;
+  }
+  .mobile-menu-btn:before {
+    top: 0;
+  }
+  .mobile-menu-btn:after {
+    bottom: 0;
+  }
+  .mobile-menu-btn em {
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  .header.fixed .mobile-menu-btn em {
+    opacity: 0;
+  }
+  .header.fixed .mobile-menu-btn:before {
+    animation: mobileBtnTopMoving 0.3s linear forwards;
+  }
+  .header.fixed .mobile-menu-btn:after {
+    animation: mobileBtnBottomMoving 0.3s linear forwards;
+  }
+  .header:not(.fixed) .mobile-menu-btn:before {
+    animation: mobileBtnTopMovingBack 0.3s linear forwards;
+  }
+  .header:not(.fixed) .mobile-menu-btn:after {
+    animation: mobileBtnBottomMovingBack 0.3s linear forwards;
+  }
+
+  .navigation:not(.navigation--dropdown) {
+    position: relative;
+  }
+  .switch-theme {
+    position: absolute;
+    top: 50%;
+    right: 29px;
+    transform: translateY(-50%);
+    opacity: 0;
+    z-index: -1;
+  }
+  .header.fixed .switch-theme {
+    z-index: 1;
+    opacity: 1;
+  }
+  .header.fixed .header__col--absolute .btn {
+    opacity: 0;
+    z-index: -1;
+  }
+  .header__mobile-contacts {
+    margin-top: var(--spacing-m);
+  }
+  .header__mobile-contacts .address {
+    margin-top: var(--spacing-m);
+    text-align: center;
+  }
+  .header__mobile-contacts .address a:not(.btn):not(.logo) {
+     color: inherit;
+     text-decoration: none;
+  }
+}
+@media (min-width: 992px) {
+  .header__col {
+    align-items: center;
+  }
+  .header__mobile-btn,
+  .header__mobile-contacts {
+    display: none;
+  }
+  .navigation__list,
+  .header__col {
+    gap: calc(var(--spacing-s) + var(--spacing-xxs));
+  }
+
 }
