--- a/src/app.css
+++ b/src/app.css
@@ -24,12 +24,12 @@ body {
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 1218px;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: var(--spacing-s);
+  padding-right: var(--spacing-s);
 }
 
 .row {
