--- a/src/app.css
+++ b/src/app.css
@@ -69,10 +69,29 @@ ul {
   font-weight: 500;
   font-family: inherit;
   font-size: 16px;
+  border-width: 1px;
+  border-style: solid;
 }
 .btn.btn--primary {
   background-color: var(--orange);
   color: var(--text-white-btn);
+  border-color: var(--orange);
+}
+.btn--secondary {
+  background-color: var(--teal);
+  color: var(--deep-navy);
+  border-color: var(--teal);
+}
+.btn--outline {
+  border-color: inherit;
+  color: inherit;
+  background-color: transparent;
+}
+
+.buttons {
+  display: flex;
+  align-items: center;
+  gap: var(--spacing-s);
 }
 
 @media (max-width: 1279px) {
@@ -82,9 +101,43 @@ ul {
   .btn {
     height: 45px;
   }
+
+  .section__content {
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-m)
+  }
+}
+@media (max-width: 767px) {
+  .section {
+    padding-top: var(--spacing-m);
+    padding-bottom: var(--spacing-m);
+  }
+}
+@media (min-width: 768px) and (max-width: 1279px) {
+  .section {
+    padding-top: var(--spacing-l);
+    padding-bottom: var(--spacing-l);
+  }
 }
 @media (min-width: 1280px) {
   .btn {
     height: 56px;
   }
+
+  .section {
+    padding-top: var(--spacing-2xl);
+    padding-bottom: var(--spacing-2xl);
+  }
+  .section__content {
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-m)
+  }
 }
+
+
+
+
+/* Top section */
+
