--- a/src/lib/assets/css/typothraphy.css
+++ b/src/lib/assets/css/typothraphy.css
@@ -136,6 +136,7 @@ p a:not(.btn):not(.logo) {
   font-family: 'Shift Regular', sans-serif;
   font-weight: 400;
   line-height: 1.4;
+  font-size: 16px;
 }
 .text-large {
   font-weight: 700;
@@ -147,6 +148,20 @@ p a:not(.btn):not(.logo) {
   font-weight: 300;
   line-height: 1.4;
   letter-spacing: -0.01em;
+}
+
+.headline-highlight {
+  position: relative;
+}
+.headline-highlight:before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 30px;
+  left: 0;
+  bottom: 10px;
+  z-index: -1;
+  background-color: light-dark(var(--teal), var(--deep-green));
 }
 
 @media (max-width: 767px) {
