--- a/src/lib/assets/css/typothraphy.css
+++ b/src/lib/assets/css/typothraphy.css
@@ -131,9 +131,9 @@ p a:not(.btn):not(.logo) {
   font-family: 'Family', sans-serif;
   font-weight: 400;
   line-height: 1.4;
+  letter-spacing: -0.01em;
 }
 .text-simple {
-  font-family: 'Shift Regular', sans-serif;
   font-weight: 400;
   line-height: 1.4;
   font-size: 16px;
