--- a/src/lib/components/TextBlock/text-block.css
+++ b/src/lib/components/TextBlock/text-block.css
@@ -1,4 +1,11 @@
 
+.text-block .text-simple {
+  margin-bottom: 0;
+  display: inline-flex;
+  align-items: center;
+  gap: 12px;
+}
+
 @media (max-width: 767px) {
   .text-block .text-emphasis {
     font-size: 16px;
