started icon-list component

--- a/src/lib/assets/css/variables.css
+++ b/src/lib/assets/css/variables.css
@@ -49,6 +49,7 @@
   --deep-navy-pale:   #d8d8d8;
 
   --white:            #fff;
+  --white-pale:       #F9FAFB;
 
   /* FONT COLORS */
   --text-dark:        #100F08;
