--- a/src/app.css
+++ b/src/app.css
@@ -126,6 +126,11 @@ img {
   right: 0;
   top: 0;
 }
+
+.two-columns-text {
+  display: flex;
+}
+
 @media (max-width: 1279px) {
   .desktop-visible {
       display: none;
@@ -136,6 +141,12 @@ img {
 
   .section__content {
       gap: var(--spacing-s);
+  }
+}
+@media (max-width: 991px) {
+  .two-columns-text {
+    flex-direction: column;
+    gap: var(--spacing-s);
   }
 }
 @media (max-width: 767px) {
@@ -170,6 +181,14 @@ img {
   .hero-section {
     padding-top: calc(1.5 * var(--spacing-m));
     padding-bottom: var(--spacing-xl);
+  }
+}
+@media (min-width: 992px) {
+  .two-columns-text {
+    gap: var(--spacing-l);
+  }
+  .two-columns-text p {
+    flex: 1;
   }
 }
 @media (min-width: 1280px) {
