--- a/src/lib/assets/css/typothraphy.css
+++ b/src/lib/assets/css/typothraphy.css
@@ -138,6 +138,12 @@ p a:not(.btn):not(.logo) {
   line-height: 1.4;
   font-size: 16px;
 }
+.text-simple.in-line {
+  margin-bottom: 0;
+  display: inline-flex;
+  align-items: center;
+  gap: 12px;
+}
 .text-large {
   font-weight: 700;
   line-height: 1.1;
@@ -157,11 +163,17 @@ p a:not(.btn):not(.logo) {
   content: '';
   position: absolute;
   width: 100%;
-  height: 30px;
   left: 0;
-  bottom: 10px;
   z-index: -1;
   background-color: light-dark(var(--teal), var(--deep-green));
+}
+h1 .headline-highlight:before {
+  height: 30px;
+  bottom: 10px;
+}
+h2 .headline-highlight:before {
+  height: 18px;
+  bottom: 5px;
 }
 
 @media (max-width: 767px) {
