--- a/src/lib/assets/css/typothraphy.css
+++ b/src/lib/assets/css/typothraphy.css
@@ -49,7 +49,6 @@
   font-style: normal;
 }
 
-
 @font-face {
   font-family: 'Shift Regular';
   font-style: normal;
@@ -103,7 +102,8 @@ h3 {
   line-height: 1.2;
   letter-spacing: -0.01em;
 }
-h4 {
+h4,
+.h4 {
   font-family: 'Shift Bold', sans-serif;
   font-weight: 700;
   line-height: 1;
@@ -186,7 +186,8 @@ h2 .headline-highlight:before {
   h3 {
     font-size: 24px;
   }
-  h4 {
+  h4,
+  .h4 {
     font-size: 16px;
   }
   p {
@@ -215,7 +216,8 @@ h2 .headline-highlight:before {
   h3 {
     font-size: 30px;
   }
-  h4 {
+  h4,
+  .h4 {
     font-size: 18px;
   }
   p {
@@ -244,7 +246,8 @@ h2 .headline-highlight:before {
   h3 {
     font-size: 32px;
   }
-  h4 {
+  h4,
+  .h4 {
     font-size: 20px;
   }
   p {
