--- a/src/lib/components/IconList/icon-list.css
+++ b/src/lib/components/IconList/icon-list.css
@@ -1,10 +1,60 @@
-.icon-list {
-    display: flex;
-}
-.icon-list__text {
-    width: 325px;
+
+.icon-list__list-wrap {
+  flex: 1;
 }
 .icon-list__list {
-    flex: 1;
+  color: inherit;
+  list-style: none;
+}
+.icon-list__list li {
+  display: flex;
+  gap: var(--spacing-xs);
+}
+.icon-list__list li:before {
+  content: "";
+  width: 33px;
+  height: 32px;
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  display: block;
+  flex-shrink: 0;
+}
+.icon-list__list--arrow li:before {
+  background-image: url(../../assets/images/icons/list-arrow.svg);
+}
+@media (max-width: 991px) {
+  .icon-list__text {
+    margin-bottom: var(--spacing-m);
+  }
+  .icon-list__text br {
+    display: none;
+  } 
+  .icon-list__list li {
+    padding-top: var(--spacing-s);
+    padding-bottom: var(--spacing-s);
+  }
+}
+@media (max-width: 767px) {
+  
+}
+@media (min-width: 768px) {
+  .icon-list__list {
     column-count: 2;
+    column-gap: 0;
+  }
+}
+@media (min-width: 992px) {
+  .icon-list {
+    display: flex;
+  }
+  .icon-list__text {
+    width: 25%;
+  }
+  .icon-list__list {
+    margin-top: -22px;
+    margin-bottom: -22px;
+  }
+  .icon-list__list li {
+    padding: 22px var(--spacing-s);
+  }
 }
