--- a/src/lib/components/RunningString/running-string.css
+++ b/src/lib/components/RunningString/running-string.css
@@ -6,9 +6,12 @@
 .running-string {
   width: 100%;
   overflow: hidden;
-  color: var(--teal);
+  color: inherit;
   font-weight: 300;
   line-height: 1; 
+}
+.section--green .running-string {
+  color: var(--teal);
 }
 .running-string__inner {
   display: flex;
