Running Icons Component

--- a/src/app.css
+++ b/src/app.css
@@ -146,6 +146,7 @@ img {
   .section__content {
       gap: var(--spacing-s);
   }
+
 }
 @media (max-width: 991px) {
   .two-columns-text {
@@ -182,6 +183,10 @@ img {
     padding-bottom: var(--spacing-l);
     gap: var(--spacing-l);
   }
+  .container--no-side-spacing {
+    padding-left: 0;
+    padding-right: 0;
+  }
   .hero-section {
     padding-top: calc(1.5 * var(--spacing-m));
     padding-bottom: var(--spacing-xl);
@@ -208,6 +213,9 @@ img {
       padding-top: var(--spacing-2xl);
       padding-bottom: var(--spacing-2xl);
       gap: var(--spacing-2xl);
+  }
+  .section--small-gap {
+    gap: var(--spacing-l);
   }
   .section__content {
       gap: var(--spacing-m);
