--- a/src/lib/assets/css/variables.css
+++ b/src/lib/assets/css/variables.css
@@ -56,6 +56,7 @@
   --text-white:       #e0e0e0;
   --text-white-btn:   #fff;
   --text-black:       #000;
+  --meta-text:        #696A6E;
 
   /* INFORMATION COLORS */
   --error:            #d92d20;
