--- a/src/app.css
+++ b/src/app.css
@@ -56,6 +56,7 @@ body {
 }
 
 a {
+  transition: all 0.3s;
   text-decoration: none;
 }
 
@@ -140,23 +141,6 @@ img {
 
 .two-columns-text {
   display: flex;
-}
-
-.tags {
-  margin-bottom: var(--spacing-s);
-  display: flex;
-  align-items: center;
-  gap: var(--spacing-xs);
-}
-.tag {
-  border-radius: 28px;
-  height: 34px;
-  display: inline-flex;
-  align-items: center;
-  padding-left: var(--spacing-xs);
-  padding-right: var(--spacing-xs);
-  background-color: rgba(241, 138, 0, 0.15);
-  border: 1px solid rgba(241, 138, 0, 0.7);
 }
 
 @media (max-width: 1279px) {
