--- a/src/app.css
+++ b/src/app.css
@@ -75,6 +75,7 @@ img {
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  gap: 6px;
   border-radius: 32px;
   text-decoration: none;
   font-weight: 500;
