--- a/src/lib/components/TeamCard/team-card.css
+++ b/src/lib/components/TeamCard/team-card.css
@@ -1,3 +1,6 @@
+.team-card {
+  color: inherit;
+}
 .team-card__photo {
   position: relative;
   overflow: hidden;
@@ -59,6 +62,9 @@
 }
 
 @media (max-width: 1279px) {
+  .team-card h3 {
+    margin-bottom: var(--spacing-xxs);
+  }
   .team-card__content {
     margin-top: var(--spacing-xs);
   }
