--- a/src/app.css
+++ b/src/app.css
@@ -95,21 +95,31 @@ img {
   font-size: 16px;
   border-width: 1px;
   border-style: solid;
+  cursor: pointer;
 }
 .btn.btn--primary {
   background-color: var(--orange);
   color: var(--text-white-btn);
   border-color: var(--orange);
 }
-.btn--secondary {
+.btn.btn--primary:hover {
+  background-color: rgba(241, 138, 0, 0.6);
+}
+.btn.btn--secondary {
   background-color: var(--teal);
   color: var(--deep-navy);
   border-color: var(--teal);
+}
+.btn.btn--secondary:hover {
+  background-color: rgba(109, 214, 211, 0.6);
 }
 .btn--outline {
   border-color: inherit;
   color: inherit;
   background-color: transparent;
+}
+.btn.btn--outline:hover {
+  box-shadow: 0 0 1px 1px currentColor;
 }
 
 .buttons {
@@ -168,8 +178,15 @@ img {
       gap: var(--spacing-s);
   }
 
+  .row {
+    gap: var(--spacing-m);
+  }
+
 }
 @media (max-width: 991px) {
+  .row {
+    flex-direction: column;
+  }
   .two-columns-text {
     flex-direction: column;
     gap: var(--spacing-s);
@@ -244,6 +261,9 @@ img {
   }
   .section__content {
       gap: var(--spacing-m);
+  }
+  .row {
+    gap: var(--spacing-l);
   }
 }
 
