--- a/src/routes/contact-us/contact-us.css
+++ b/src/routes/contact-us/contact-us.css
@@ -34,3 +34,49 @@
 .contact-data__icon img {
   display: block;
 }
+
+.speak-with {
+  max-width: 450px;
+  width: 100%;
+  position: relative;
+  display: flex;
+  align-items: flex-end;
+  background-color: light-dark(var(--white), #2D2D2D);
+}
+.speak-with__text {
+  width: 250px;
+  padding-top: var(--spacing-s);
+  padding-bottom: var(--spacing-s);
+  padding-left: var(--spacing-s);
+}
+.speak-with .text-black {
+  font-size: 24px;
+  letter-spacing: -0.01em;
+  line-height: 1;
+}
+.speak-with .text-family {
+  font-size: 15px;
+}
+.speak-with__photo {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  flex-shrink: 0;
+  margin-top: -30px;
+}
+.speak-with__photo img {
+  display: block;
+}
+
+@media (max-width: 991px) {
+  .speak-with{
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1279px) {
+  .contact .section__content {
+    width: 420px;
+  }
+}
