--- a/src/lib/assets/css/typothraphy.css
+++ b/src/lib/assets/css/typothraphy.css
@@ -89,6 +89,10 @@
   text-align: center;
 }
 
+.text-grey {
+  color: var(--meta-text);
+}
+
 h1 {
   font-weight: 800;
   line-height: 1;
@@ -167,6 +171,7 @@ p a:not(.btn):not(.logo) {
   color: var(--text-black);
 }
 .text-callout {
+  font-family: 'Soehne', sans-serif;
   font-weight: 300;
   line-height: 1.4;
   letter-spacing: -0.01em;
