--- a/src/lib/components/Header/header.css
+++ b/src/lib/components/Header/header.css
@@ -153,7 +153,6 @@
   opacity: 0;
 }
 .switch-theme:after {
-  background-image: url(../../assets/images/icons/switch-sun.svg);
   opacity: 1;
 }
 .switch-theme.dark {
@@ -307,6 +306,10 @@
     transform: translateY(-50%);
     opacity: 0;
     z-index: -1;
+    border-color: var(--white);
+  }
+  .switch-theme:after {
+    background-image: url(../../assets/images/icons/switch-sun-white.svg);
   }
   .header.fixed .switch-theme {
     z-index: 1;
@@ -376,5 +379,8 @@
     background-color: #fff;
     box-shadow: var(--shadow-xl);
     border: 1px solid var(--deep-navy-pale)
+  }
+  .switch-theme:after {
+    background-image: url(../../assets/images/icons/switch-sun.svg);
   }
 }
